--- a/kotox-mobile-media/src/main/res/values/strings.xml
+++ b/kotox-mobile-media/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="main_screen_title">@string/app_name</string>
     <string name="main_screen_image_placeholder">Nothing captured</string>
     <string name="main_screen_action_camera_custom">Custom</string>
+    <string name="main_screen_significant_colors_title">Significant colors:</string>
 
 </resources>
