--- a/kotox-mobile-strings/src/main/res/values/strings.xml
+++ b/kotox-mobile-strings/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="main_screen_card_split">SPLIT RESOURCE</string>
     <string name="main_screen_card_duplicated">"DUPLICATED RESOURCE"</string>
     <string name="main_screen_card_custom">"CUSTOM RESOURCE"</string>
+    <string name="main_screen_card_markdown">MARKDOWN RESOURCE</string>
 
 </resources>
