--- a/common/i18n/src/main/AndroidManifest.xml
+++ b/common/i18n/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cz.kotox.common.i18n">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <activity
