--- a/mobile/kotox-auth/src/main/res/values/strings.xml
+++ b/mobile/kotox-auth/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="main_screen_action_click_anonymous">Anonymous</string>
     <string name="main_screen_action_click_username_password">Username / Password</string>
 
+    <string name="bottom_screen_title_login">Login</string>
+    <string name="bottom_screen_title_logout">Logout</string>
+    <string name="bottom_screen_title_profile">Profile</string>
+    <string name="bottom_screen_title_settings">Settings</string>
+
 </resources>
