--- a/mobile/kotox-auth/src/main/res/values/strings.xml
+++ b/mobile/kotox-auth/src/main/res/values/strings.xml
@@ -4,11 +4,11 @@
     <string name="generic_click_to_refresh">Click to refresh</string>
     <string name="generic_error">Something wrong happened. Please try again.</string>
 
-    <string name="main_screen_title">@string/app_name</string>
-    <string name="main_screen_action_click_anonymous">Anonymous</string>
-    <string name="main_screen_action_click_username_password">Username / Password</string>
+    <string name="auth_screen_title">@string/app_name</string>
+    <string name="auth_screen_action_click_signIn">Login with 🔥</string>
+    <string name="auth_screen_action_click_signUp">Create account with 🔥</string>
 
-    <string name="bottom_screen_title_login">Login</string>
+    <string name="bottom_screen_title_auth">Auth</string>
     <string name="bottom_screen_title_logout">Logout</string>
     <string name="bottom_screen_title_profile">Profile</string>
     <string name="bottom_screen_title_settings">Settings</string>
