Type template for signIn screen.

--- a/feature/firebase-auth/src/main/res/values/strings.xml
+++ b/feature/firebase-auth/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="login_screen_sign_in">Sign in</string>
+    <string name="login_screen_login_details">Enter your login details</string>
+    <string name="login_screen_forgot_password">Forgot password? Click to get recovery email</string>
+    <string name="login_screen_recovery_email_sent">Check your inbox for the recovery email.</string>
+    <string name="login_screen_empty_password_error">Password cannot be empty.</string>
 
 </resources>
