Improve focus requesting.

--- a/feature/firebase-auth/src/main/res/values/strings.xml
+++ b/feature/firebase-auth/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="login_email_screen_forgot_password">Forgot password? Click to get recovery email</string>
     <string name="login_email_screen_recovery_email_sent">Check your inbox for the recovery email.</string>
     <string name="login_email_screen_empty_password_error">Password cannot be empty.</string>
+    <string name="login_email_screen_invalid_password">Invalid password</string>
 
     <string name="signup_screen_sign_up">Sign up</string>
     <string name="signup_screen_already_in_use">This email is already in use</string>
